Fix handling of quoted arguments and better error messages in dcmd

XMLWordPrintable

    • b16
    • generic
    • generic

        Error messages in the dcmd parser can be improved to include information on which argument failed to parse or did not exists.

        Dcmd parser does not handle quoted arguments correctly (fails to parse them).

              Assignee:
              Staffan Larsen (Inactive)
              Reporter:
              Staffan Larsen (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: