7178703: Fix handling of quoted arguments and better error messages in dcmd

Reviewed-by: coleenp, mgronlun, rbackman